Code cleanup; nothing functional